--- a/relatorio-servicos.html
+++ b/relatorio-servicos.html
@@ -5,19 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Relatório de Serviços</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
-<body class="bg-gray-100 min-h-screen flex items-center justify-center">
+<body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
   <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-lg">
     <h1 class="text-2xl font-bold mb-6 text-center">Relatório de Serviços</h1>
-    <form class="space-y-4">
-      <div>
-        <label class="block text-gray-700 font-semibold mb-2" for="servico">Serviço a ser realizado</label>
-        <input type="text" id="servico" name="servico" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-400" required>
-      </div>
-      <div>
-        <label class="block text-gray-700 font-semibold mb-2" for="executado">Serviço executado por</label>
-        <input type="text" id="executado" name="executado" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-400" required>
-      </div>
+    <form id="reportForm" class="space-y-4">
       <div>
         <label class="block text-gray-700 font-semibold mb-2" for="data-inicio">Data de Início</label>
         <input type="date" id="data-inicio" name="data-inicio" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-400" required>
@@ -27,7 +20,7 @@
         <input type="date" id="data-finalizado" name="data-finalizado" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-green-400">
       </div>
       <div>
-        <label class="block text-gray-700 font-semibold mb-2" for="obs">Observações</label>
+        <label class="block text-gray-700 font-semibold mb-2" for="obs">Registros</label>
         <textarea id="obs" name="obs" rows="4" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-400"></textarea>
       </div>
       <div class="flex flex-col sm:flex-row gap-2">
@@ -36,11 +29,19 @@
         <button type="button" onclick="exportarEmail()" class="flex-1 bg-green-500 text-white font-bold py-2 px-4 rounded hover:bg-green-600 transition">Exportar por Email</button>
       </div>
       <div class="flex flex-col sm:flex-row gap-2 mt-2">
-        <button type="submit" class="flex-1 bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-600 transition">Salvar Relatório</button>
-        <button type="button" onclick="salvarRelatorioNaTela()" class="flex-1 bg-indigo-500 text-white font-bold py-2 px-4 rounded hover:bg-indigo-600 transition">Cadastrar</button>
+        <button type="button" onclick="salvarRelatorio()" class="flex-1 bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-600 transition">Salvar Relatório</button>
+        <button type="button" onclick="salvarRelatorio()" class="flex-1 bg-indigo-500 text-white font-bold py-2 px-4 rounded hover:bg-indigo-600 transition">Cadastrar</button>
       </div>
     </form>
-    <div id="relatorios-salvos" class="mt-8 hidden"></div>
+
+    <div id="relatorios-salvos" class="mt-8 pt-4 border-t border-gray-200">
+      <h2 class="text-xl font-bold mb-4 text-center">Relatórios Salvos</h2>
+      <div id="saved-reports-list" class="space-y-4">
+        </div>
+      <div class="text-center mt-4">
+        <button type="button" onclick="limparRelatorios()" class="bg-gray-400 text-white font-bold py-2 px-4 rounded hover:bg-gray-500 transition text-sm">Limpar Todos os Relatórios</button>
+      </div>
+    </div>
   </div>
   <script src="relatorio-servicos.js"></script>
 </body>
