--- a/relatorio-servicos.html
+++ b/relatorio-servicos.html
@@ -16,11 +16,7 @@
         <input type="date" id="data-inicio" name="data-inicio" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-400" required>
       </div>
       <div>
-        <label class="block text-gray-700 font-semibold mb-2" for="data-finalizado">Data da Finalização</label>
-        <input type="date" id="data-finalizado" name="data-finalizado" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-green-400">
-      </div>
-      <div>
-        <label class="block text-gray-700 font-semibold mb-2" for="obs">Registros</label>
+        <label class="block text-gray-700 font-semibold mb-2" for="obs">Observações</label>
         <textarea id="obs" name="obs" rows="4" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-400"></textarea>
       </div>
       <div class="flex flex-col sm:flex-row gap-2">
