--- a/relatorio-servicos.html
+++ b/relatorio-servicos.html
@@ -28,6 +28,7 @@
         <button type="button" onclick="salvarRelatorio()" class="flex-1 bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-600 transition">Salvar Relatório</button>
         <button type="button" onclick="salvarRelatorio()" class="flex-1 bg-indigo-500 text-white font-bold py-2 px-4 rounded hover:bg-indigo-600 transition">Cadastrar</button>
       </div>
+      <input type="hidden" id="report-id">
     </form>
 
     <div id="relatorios-salvos" class="mt-8 pt-4 border-t border-gray-200">
